--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,6 +33,44 @@ body {
       url("../assets/img/hero.jpg");
     background-size: cover;
     background-position: top;
+    position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 }
 
+.heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+    
+}
+.heading-primary-main {
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+
+}
+.heading-primary-sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+
+}
+
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo {
+    height: 35px;
+}
+
+.text-box {
+    /* * neat trick to center text box in hero section */
+    position: absolute;
+    top: 40%;
+    left: 50%;  
+    transform: translate(-50%, -50%);
+}
