--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,6 +40,8 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    /* ! Hack to stop animation from jumping inside */
+    backface-visibility: hidden;
     
 }
 .heading-primary-main {
@@ -47,6 +49,7 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation: moveInLeft 1s ease-in;
 
 }
 .heading-primary-sub {
@@ -54,6 +57,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-in;
 
 }
 
@@ -73,4 +77,44 @@ body {
     top: 40%;
     left: 50%;  
     transform: translate(-50%, -50%);
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+
+    }
+
+    80% {
+        opacity: 0.5;
+        transform: translateX(10px);
+
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100);
+
+    }
+
+    80% {
+        opacity: 0.5;
+        transform: translateX(-10px);
+
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+
+    }
 }
