--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,6 +25,29 @@ body {
     padding: 10px;
 }
 
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: transform .2s;
+}
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
 .header {
     height: 95vh;
     background-image: linear-gradient(to right bottom,
@@ -42,6 +65,7 @@ body {
     text-transform: uppercase;
     /* ! Hack to stop animation from jumping inside */
     backface-visibility: hidden;
+    margin-bottom: 60px;
     
 }
 .heading-primary-main {
@@ -62,6 +86,7 @@ body {
 }
 
 .logo-box {
+    
     position: absolute;
     top: 40px;
     left: 40px;
@@ -72,18 +97,19 @@ body {
 }
 
 .text-box {
-    /* * neat trick to center text box in hero section */
+    /* ! neat trick to center text box in hero section */
     position: absolute;
     top: 40%;
     left: 50%;  
     transform: translate(-50%, -50%);
+    /* @useful to get inline-block children to center */
+    text-align: center;
 }
 
 @keyframes moveInLeft {
     0% {
         opacity: 0;
         transform: translateX(-100px);
-
     }
 
     80% {
