--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,12 @@ Dark Gren: #28b485
 
 */
 
-$color-primary: "#7ed56f";
+$light-green: #7ed56f;
+$mid-green: #55c57a;
+$dark-green: #28b485;
+$color-grey: #777;
+$color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -28,13 +33,13 @@ body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #777;
+    color: $color-grey;
     padding: 1rem;
     box-sizing: border-box;
 }
 
 .heading-primary {
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     /* ! Hack to stop animation from jumping inside */
     backface-visibility: hidden;
@@ -72,11 +77,11 @@ body {
 }
 .btn:hover {
     transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 }
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
 }
 
 .btn::after {
@@ -91,8 +96,6 @@ body {
     left: 0%;
     z-index: -1;
     transition: all .4s;
-    
-
 }
 
 .btn:hover::after {
@@ -109,22 +112,20 @@ body {
 
 
 .btn--white {
-    background-color: #fff;
-    color: #777;
+    background-color: $color-white;
+    color: $color-grey;
 } 
 .btn--white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
- 
-
-
-
 
 .header {
     height: 95vh;
     background-image: linear-gradient(to right bottom,
-     rgba(126, 213, 111, 0.8),
-     rgba(40, 180, 133, 0.8)),
+     rgba($light-green, .8), 
+     rgba($dark-green, .8)),
+
+     
       url("../assets/img/hero.jpg");
     background-size: cover;
     background-position: top;
