--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,25 +44,25 @@ body {
     /* ! Hack to stop animation from jumping inside */
     backface-visibility: hidden;
     margin-bottom: 6rem;
+
+    &--main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 35px;
+        animation: moveInLeft 1s ease-in;
     
+    }
+    &--sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.8rem;
+        animation: moveInRight 1s ease-in;
+    
+    }
+ 
 }
-.heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 35px;
-    animation: moveInLeft 1s ease-in;
-
-}
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.8rem;
-    animation: moveInRight 1s ease-in;
-
-}
-
 
 .btn:link,
 .btn:visited {
@@ -131,29 +131,28 @@ body {
     background-position: top;
     position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-}
 
-
-.header__logo-box {
+    &__logo-box {
     
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+    &__logo {
+        height: 3.5rem;
+    }
+    &__text-box {
+        /* ! neat trick to center text box in hero section */
+        position: absolute;
+        top: 40%;
+        left: 50%;  
+        transform: translate(-50%, -50%);
+        /* @useful to get inline-block children to center */
+        text-align: center;
+    }
+
 }
 
-.header__logo {
-    height: 3.5rem;
-}
-
-.header__text-box {
-    /* ! neat trick to center text box in hero section */
-    position: absolute;
-    top: 40%;
-    left: 50%;  
-    transform: translate(-50%, -50%);
-    /* @useful to get inline-block children to center */
-    text-align: center;
-}
 
 @keyframes moveInLeft {
     0% {
