--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,61 +63,65 @@ body {
     }
  
 }
+.btn {
+    &:link,
+    &:visited {
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: transform .2s;
+        position: relative;
+        font-size: 1.6rem;
+    }
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    }
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
+    }
 
-.btn:link,
-.btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: transform .2s;
-    position: relative;
-    font-size: 1.6rem;
+    &::after {
+        
+        content: "";
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 10rem;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        z-index: -1;
+        transition: all .4s;
+    }
+
+    &:hover::after {
+        transform: scaleX(1.4) scaleY(1.6);
+        opacity: 0;
+    }
+
+
+    &--animated {
+        /* @backwards apply the styles of 0% before animation starts */
+        animation: moveInBottom .5s ease-out .75s backwards;
+    }
+
+
+
+    &--white {
+        background-color: $color-white;
+        color: $color-grey;
+    } 
+    &--white::after {
+        background-color: $color-white;
+    }
+
 }
-.btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-}
-.btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
-}
-
-.btn::after {
-    
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    z-index: -1;
-    transition: all .4s;
-}
-
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
 
 
-.btn--animated {
-    /* @backwards apply the styles of 0% before animation starts */
-    animation: moveInBottom .5s ease-out .75s backwards;
-}
-
-
-
-.btn--white {
-    background-color: $color-white;
-    color: $color-grey;
-} 
-.btn--white::after {
-    background-color: $color-white;
-}
 
 .header {
     height: 95vh;
