--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,6 +78,11 @@ body {
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+
+        &::after {
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
     }
     &:active {
         transform: translateY(-1px);
@@ -98,12 +103,6 @@ body {
         transition: all .4s;
     }
 
-    &:hover::after {
-        transform: scaleX(1.4) scaleY(1.6);
-        opacity: 0;
-    }
-
-
     &--animated {
         /* @backwards apply the styles of 0% before animation starts */
         animation: moveInBottom .5s ease-out .75s backwards;
@@ -114,9 +113,10 @@ body {
     &--white {
         background-color: $color-white;
         color: $color-grey;
-    } 
-    &--white::after {
-        background-color: $color-white;
+
+        &::after {
+            background-color: $color-white;
+        }
     }
 
 }
