--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,15 @@
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
+
+@import "base/base";
+@import "base/animations";
+@import "base/typography";
+@import "base/utilities";
+@import "base/base";
+
+@import "pages/home";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100&display=swap');
 /*
 ! COLORS: 
@@ -8,13 +19,6 @@ medium green: #55c57a
 Dark Gren: #28b485
 
 */
-
-$light-green: #7ed56f;
-$mid-green: #55c57a;
-$dark-green: #28b485;
-$color-grey: #777;
-$color-white: #fff;
-$color-black: #000;
 
 *,
 *::after,
@@ -84,7 +88,7 @@ body {
             opacity: 0;
         }
     }
-    
+
     &:active {
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
