--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,209 +9,16 @@
 @import "base/utilities";
 @import "base/base";
 
+@import "components/button";
+
+@import "layout/header";
+
 @import "pages/home";
+
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100&display=swap');
-/*
-! COLORS: 
-
-lightgreen: #7ed56f
-medium green: #55c57a
-Dark Gren: #28b485
-
-*/
-
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-    
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    color: $color-grey;
-    padding: 1rem;
-    box-sizing: border-box;
-}
-
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    /* ! Hack to stop animation from jumping inside */
-    backface-visibility: hidden;
-    margin-bottom: 6rem;
-
-    &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 35px;
-        animation: moveInLeft 1s ease-in;
-    
-    }
-    &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.8rem;
-        animation: moveInRight 1s ease-in;
-    
-    }
- 
-}
-.btn {
-    &:link,
-    &:visited {
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 1.5rem 4rem;
-        display: inline-block;
-        border-radius: 10rem;
-        transition: transform .2s;
-        position: relative;
-        font-size: 1.6rem;
-    }
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-
-        &::after {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
-    }
-
-    &:active {
-        transform: translateY(-1px);
-        box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
-    }
-
-    &::after {
-        
-        content: "";
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        border-radius: 10rem;
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        z-index: -1;
-        transition: all .4s;
-    }
-
-    &--animated {
-        /* @backwards apply the styles of 0% before animation starts */
-        animation: moveInBottom .5s ease-out .75s backwards;
-    }
-
-
-    &--white {
-        background-color: $color-white;
-        color: $color-grey;
-
-        &::after {
-            background-color: $color-white;
-        }
-    }
-
-}
 
 
 
-.header {
-    height: 95vh;
-    background-image: linear-gradient(to right bottom,
-     rgba($light-green, .8), 
-     rgba($dark-green, .8)),
-
-     
-      url("../assets/img/hero.jpg");
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-
-    &__logo-box {
-    
-        position: absolute;
-        top: 4rem;
-        left: 4rem;
-    }
-    &__logo {
-        height: 3.5rem;
-    }
-    &__text-box {
-        /* ! neat trick to center text box in hero section */
-        position: absolute;
-        top: 40%;
-        left: 50%;  
-        transform: translate(-50%, -50%);
-        /* @useful to get inline-block children to center */
-        text-align: center;
-    }
-
-}
 
 
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        opacity: 0.5;
-        transform: translateX(1rem);
-
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100);
-
-    }
-
-    80% {
-        opacity: 0.5;
-        transform: translateX(-1rem);
-
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-
-    }
-}
-
-@keyframes moveInBottom {
-    0%{
-        opacity: 0;
-        transform: translateY(3rem);
-
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-
-    }
-    
-}
