--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $light-green: #7ed56f;
 $mid-green: #55c57a;
 $dark-green: #28b485;
@@ -5,3 +6,8 @@ $dark-green: #28b485;
 $color-grey: #777;
 $color-white: #fff;
 $color-black: #000;
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
