--- a/assets/styles.css
+++ b/assets/styles.css
@@ -68,6 +68,21 @@ body {
     letter-spacing: 1.8rem;
     animation: moveInRight 1s ease-in; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  display: inline-block;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: .2s transform;
+  text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .heading-secondary:hover {
+    transform: skew(2deg, 10deg) scale(1.1); }
+
 *,
 *::after,
 *::before {
@@ -130,7 +145,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -173,3 +188,8 @@ body {
     width: calc( 2 * ((100% - 3 * 6rem) / 4 ) + 6rem); }
   .row .col-3-of-4 {
     width: calc( 3 * ((100% - 3 * 6rem) / 4 ) + 2*6rem); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
