--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,3 +31,20 @@ body {
     }
  
 }
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $light-green, $dark-green);
+    display: inline-block;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: .2s transform;
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    
+    &:hover {
+        transform: skew(2deg, 10deg) scale(1.1);
+    }
+}
