--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,7 +19,6 @@ body {
         font-weight: 400;
         letter-spacing: 35px;
         animation: moveInLeft 1s ease-in;
-    
     }
     &--sub {
         display: block;
@@ -27,7 +26,6 @@ body {
         font-weight: 700;
         letter-spacing: 1.8rem;
         animation: moveInRight 1s ease-in;
-    
     }
  
 }
@@ -46,5 +44,20 @@ body {
     
     &:hover {
         transform: skew(2deg, 5deg) scale(1.1);
+    }
+}
+
+.heading-tertiary {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+
+}
+
+.paragraph {
+    font-size: 1.6rem;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
     }
 }
