--- a/assets/styles.css
+++ b/assets/styles.css
@@ -161,6 +161,27 @@ body {
   .btn--white::after {
     background-color: #fff; }
 
+.btn-text {
+  transition: color .8s; }
+  .btn-text:link, .btn-text:visited {
+    font-size: 1.6rem;
+    color: #28b485;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 0.1rem solid #28b485;
+    padding: .3rem; }
+  .btn-text:hover {
+    cursor: help;
+    background-color: #7ed56f;
+    color: #fff;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+    transform: translateY(-0.2rem);
+    border-bottom: 0.1rem solid #7ed56f; }
+  .btn-text:active {
+    cursor: default;
+    box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.15);
+    transform: translateY(0); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../assets/img/hero.jpg");
