added composition section and also new effects to css

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -66,6 +66,7 @@
         text-decoration: none;
         border-bottom: .1rem solid $dark-green;
         padding: .3rem;
+        backface-visibility: hidden;
 
 
     }
