--- a/assets/styles.css
+++ b/assets/styles.css
@@ -169,7 +169,8 @@ body {
     display: inline-block;
     text-decoration: none;
     border-bottom: 0.1rem solid #28b485;
-    padding: .3rem; }
+    padding: .3rem;
+    backface-visibility: hidden; }
   .btn-text:hover {
     cursor: help;
     background-color: #7ed56f;
@@ -225,6 +226,18 @@ body {
     color: transparent; }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem; }
+  .card__side {
+    background-color: orangered;
+    height: 50rem;
+    transition: all .8s;
+    color: #fff;
+    font-size: 2rem; }
+  .card:hover .card__side {
+    transform: rotateY(180deg); }
 
 .header {
   height: 95vh;
@@ -283,7 +296,12 @@ body {
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../assets/img/nat-4.jpg");
   background-size: cover;
-  transform: skewY(-7deg);
+  transform: skewY(-5deg);
   margin-top: -10rem; }
   .section-features > * {
-    transform: skewY(7deg); }
+    transform: skewY(5deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25rem 0 50rem 0;
+  margin-top: -6rem; }
