--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,12 @@
 @import "base/animations";
 @import "base/typography";
 @import "base/utilities";
-@import "base/base";
+@import "base/base"; 
 
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/card";
 
 @import "layout/header";
 @import "layout/grid";
