--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,12 +12,19 @@
     rgba($dark-green, .8)),
     url("../assets/img/nat-4.jpg");
     background-size: cover;
-    transform: skewY(-7deg);
+    transform: skewY(-5deg);
     margin-top: -10rem;
 
     & > * {
-        transform: skewY(7deg);
+        transform: skewY(5deg);
 
     }
+
+}
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top:  -6rem;
+    
 
 }
