--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,6 +22,7 @@
 
         &--front {
             background-color: $color-white;
+            color: $color-black;
 
             
         }
@@ -36,9 +37,24 @@
         }
     }
     &:hover &__side--front{
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
     &:hover &__side--back{
         transform: rotateY(0);
+    }
+
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        &--1 {
+            background-image: url('./../assets/img/nat-5.jpg');
+        }
+        &--2 {
+            background-image: url("./../assets/img/nat-6.jpg");
+        }
+        &--3 {
+            background-image: url("./../assets/img/nat-7.jpg");
+        }
+
     }
 }
