--- a/assets/styles.css
+++ b/assets/styles.css
@@ -235,7 +235,6 @@ body {
   .card__side {
     height: 50rem;
     transition: all .8s ease;
-    color: #fff;
     font-size: 2rem;
     position: absolute;
     width: 100%;
@@ -243,10 +242,11 @@ body {
     left: 0%;
     backface-visibility: hidden;
     border-radius: .3rem;
+    overflow: hidden;
     box-shadow: 0 1.5rem 0.4rem rgba(0, 0, 0, 0.15); }
     .card__side--front {
       background-color: #fff;
-      color: #000; }
+      color: #fff; }
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back-1 {
@@ -257,13 +257,29 @@ body {
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
-    height: 23rem; }
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
-      background-image: url("./../assets/img/nat-5.jpg"); }
+      background-image: linear-gradient(to right bottom, #ffb990, #ff7730), url("./../assets/img/nat-5.jpg"); }
     .card__picture--2 {
       background-image: url("./../assets/img/nat-6.jpg"); }
     .card__picture--3 {
       background-image: url("./../assets/img/nat-7.jpg"); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 72%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 144, 0.85), rgba(255, 119, 48, 0.85)); }
 
 .header {
   height: 95vh;
@@ -271,6 +287,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
   .header__logo-box {
     position: absolute;
