--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -10,7 +10,6 @@
         
         height: 50rem;
         transition: all .8s ease;
-        color: #fff;
         font-size: 2rem;
         position: absolute;
         width: 100%;
@@ -18,13 +17,12 @@
         left: 0%;
         backface-visibility: hidden;
         border-radius: .3rem;
+        overflow: hidden;
         box-shadow: 0 1.5rem .4rem rgba($color-black,  .15);
 
         &--front {
             background-color: $color-white;
-            color: $color-black;
-
-            
+            color: $color-white;
         }
         &--back {
 
@@ -46,8 +44,13 @@
     &__picture {
         background-size: cover;
         height: 23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0 0, 100% 0,100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0,100% 85%, 0 100%);
+        
         &--1 {
-            background-image: url('./../assets/img/nat-5.jpg');
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            url('./../assets/img/nat-5.jpg');
         }
         &--2 {
             background-image: url("./../assets/img/nat-6.jpg");
@@ -56,5 +59,24 @@
             background-image: url("./../assets/img/nat-7.jpg");
         }
 
+    }
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 72%;
+
+    }
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        &--1 {
+            background-image: linear-gradient(to right bottom,
+             rgba($color-secondary-light, .85),
+             rgba($color-secondary-dark, .85));
+        }
     }
 }
