--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-tertiary-dark: #5643ff;
 
 $color-grey: #777;
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 $color-white: #fff;
 $color-black: #000;
 
