all three card sections completed with respective colors

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -32,6 +32,14 @@
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
 
             }
+            &-2 {
+                background-image: linear-gradient(to right bottom, $light-green, $mid-green);
+
+            }
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+
+            }
         }
     }
     &:hover &__side--front{
@@ -53,10 +61,14 @@
             url('./../assets/img/nat-5.jpg');
         }
         &--2 {
-            background-image: url("./../assets/img/nat-6.jpg");
+            background-image: linear-gradient(to right bottom, $light-green, $mid-green),
+            url("./../assets/img/nat-6.jpg");
         }
         &--3 {
-            background-image: url("./../assets/img/nat-7.jpg");
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+            url("./../assets/img/nat-7.jpg");
+
+            
         }
 
     }
@@ -80,6 +92,16 @@
              rgba($color-secondary-light, .85),
              rgba($color-secondary-dark, .85));
         }
+        &--2 {
+            background-image: linear-gradient(to right bottom,
+             rgba($light-green, .85),
+             rgba($mid-green, .85));
+        }
+        &--3 {
+            background-image: linear-gradient(to right bottom,
+             rgba($color-tertiary-light, .85),
+             rgba($color-tertiary-dark, .85));
+        }
     }
 
     &__details {
@@ -101,5 +123,31 @@
 
             }
         }
+    }
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        //this text align controls the button
+        text-align: center;
+    }
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+        
+    }
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+
+    }
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
+
     }
 }
