--- a/assets/styles.css
+++ b/assets/styles.css
@@ -251,6 +251,10 @@ body {
       transform: rotateY(180deg); }
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #ffb990, #ff7730); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #7ed56f, #55c57a); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643ff); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -264,9 +268,9 @@ body {
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb990, #ff7730), url("./../assets/img/nat-5.jpg"); }
     .card__picture--2 {
-      background-image: url("./../assets/img/nat-6.jpg"); }
+      background-image: linear-gradient(to right bottom, #7ed56f, #55c57a), url("./../assets/img/nat-6.jpg"); }
     .card__picture--3 {
-      background-image: url("./../assets/img/nat-7.jpg"); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643ff), url("./../assets/img/nat-7.jpg"); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -282,6 +286,10 @@ body {
     box-decoration-break: clone; }
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 185, 144, 0.85), rgba(255, 119, 48, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(85, 197, 122, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 255, 0.85)); }
   .card__details {
     padding: 3rem; }
     .card__details ul {
@@ -295,6 +303,23 @@ body {
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #eee; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .header {
   height: 95vh;
