--- a/assets/styles.css
+++ b/assets/styles.css
@@ -99,6 +99,9 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
 
+.u-margin-bottom-top {
+  margin-bottom: 8rem; }
+
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
