--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -5,6 +5,9 @@
 .u-margin-bottom-big {
     margin-bottom: 8rem;
 }
+.u-margin-bottom-top {
+    margin-bottom: 8rem;
+}
 
 .u-margin-bottom-medium {
     margin-bottom: 4rem;
