fixed bug in css, hero button had green in ::after psuedoclass, error in {} placement

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,6 +102,9 @@ body {
 .u-margin-bottom-top {
   margin-bottom: 8rem; }
 
+.u-margin-bottom-top-huge {
+  margin-bottom: 10rem; }
+
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
@@ -163,6 +166,12 @@ body {
   color: #777; }
   .btn--white::after {
     background-color: #fff; }
+
+.btn--green {
+  background-color: #28b485;
+  color: #fff; }
+  .btn--green::after {
+    background-color: #28b485; }
 
 .btn-text {
   transition: color .8s; }
@@ -267,7 +276,9 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: .3rem;
+    border-top-right-radius: .3rem; }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb990, #ff7730), url("./../assets/img/nat-5.jpg"); }
     .card__picture--2 {
@@ -389,5 +400,5 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -6rem; }
