--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,6 +8,9 @@
 .u-margin-bottom-top {
     margin-bottom: 8rem;
 }
+.u-margin-bottom-top-huge {
+    margin-bottom: 10rem;
+}
 
 .u-margin-bottom-medium {
     margin-bottom: 4rem;
