--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -53,7 +53,14 @@
             background-color: $color-white;
         }
     }
-
+    &--green {
+        background-color: $dark-green;
+        color: $color-white;
+        
+        &::after {
+            background-color: $dark-green;
+        }
+    }
 }
 
 .btn-text {
