--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,6 +25,9 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top:  -6rem;
-    
+}
 
+.section-stories {
+    padding: 15rem 0;
+    background-color: $color-grey-light-1;
 }
