--- a/assets/styles.css
+++ b/assets/styles.css
@@ -466,3 +466,11 @@ body {
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.book {
+  background-image: url("../../assets/img/nat-10.jpg");
+  background-size: cover; }
