--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,3 +32,13 @@
     // background-color: $color-grey-light-1;
     position: relative;
 }
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $light-green, $dark-green);
+}
+
+.book {
+    background-image: url('../../assets/img/nat-10.jpg');
+    background-size: cover;
+}
