--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643ff;
 
 $color-grey: #777;
+$color-grey-2: #999;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 $color-white: #fff;
