input nested properly, bug fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -408,7 +408,7 @@ body {
   border-bottom: .3rem solid transparent;
   width: 90%;
   display: block; }
-  .form__input__input:focus {
+  .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
     border-bottom: 0.3rem solid #55c57a; }
