--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,7 +14,7 @@
         width: 90%;
         display: block;
 
-        &__input:focus {
+        &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
             border-bottom: .3rem solid $mid-green;
