--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -43,7 +43,7 @@
     rgba($color-white, .9) 0%,
     rgba($color-white, .9) 50%,
     transparent  50%),
-    url('../../assets/img/nat-10.jpg');
+    url("../assets/img/nat-10.jpg");
     background-size: 100%;
     border-radius: .3rem;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
@@ -51,6 +51,6 @@
     &__form {
         width: 50%;
         padding: 6rem;
-        
+
     }
 }
