--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-grey: #777;
 $color-grey-2: #999;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-dark-1: #333;
 $color-white: #fff;
 $color-black: #000;
 
