--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,9 +18,10 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
-
+ 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "pages/home";
  
