--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -55,6 +55,7 @@
 
         &:link,
         &:visited {
+            display: inline-block;
             font-size: 3rem;
             font-weight: 300;
             padding: 1rem 2rem;
@@ -62,14 +63,21 @@
             text-decoration: none;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-            background-size: 220%;
+            background-size: 230%;
             transition: all .2s;
+
+            span {
+                margin-right: 1.5rem;
+                display: inline-block;
+            }
             
         }
         &:hover,
         &:active {
+            transform: translateX(1rem);
             background-position: 100%;
             color: $mid-green;
+            
         }
     }
 }
