--- a/assets/styles.css
+++ b/assets/styles.css
@@ -580,8 +580,7 @@ body {
   top: 6.5rem;
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
-  z-index: 10;
-  transform: scale(50); }
+  z-index: 10; }
 
 .navigation__nav {
   height: 100vh;
@@ -610,6 +609,7 @@ body {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
+  border-radius: 3%;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 230%;
   transition: all .2s; }
