--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -24,7 +24,7 @@
         background-image: radial-gradient($light-green, $dark-green);
         z-index: 10;
 
-        transform: scale(50);
+        // transform: scale(50);
 
     }
 
@@ -62,6 +62,7 @@
             color: $color-white;
             text-decoration: none;
             text-transform: uppercase;
+            border-radius: 3%;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
             background-size: 230%;
             transition: all .2s;
