--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 12;
+        box-shadow: 0 1rem 3rem rgba($color-black, .1);
 
     }
     &__background {
@@ -35,6 +36,12 @@
         top: 0;
         right: 0;
         z-index: 11;
+        visibility: hidden;
+
+
+        // opacity: 0;
+        // width: 0;
+
   }
 
     &__list {
@@ -80,5 +87,14 @@
             color: $mid-green;
             
         }
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+        // visibility: visible;
+    }
+    &__checkbox:checked ~ &__nav {
+        
+        visibility: visible;
     }
 }
