--- a/assets/styles.css
+++ b/assets/styles.css
@@ -581,7 +581,8 @@ body {
   top: 6.5rem;
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
-  z-index: 10; }
+  z-index: 10;
+  transition: transform .8s; }
 
 .navigation__nav {
   height: 100vh;
@@ -590,7 +591,8 @@ body {
   top: 0;
   right: 0;
   z-index: 11;
-  visibility: hidden; }
+  visibility: hidden;
+  transition: visibility .1s; }
 
 .navigation__list {
   position: absolute;
