--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -10,6 +10,16 @@
     transform: skewX(-12deg);
     backface-visibility: hidden;
 
+    @include respond(tab-port) {
+        width: 100;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: translateX(-3rem) skew(0);
+    }
+
 
 
     &__shape {
@@ -32,6 +42,9 @@
     }
     &__text {
         transform: skewX(12deg);
+        @include respond(phone) {
+            transform: skew(0);
+        }
 
     }
     &__caption {
