--- a/assets/styles.css
+++ b/assets/styles.css
@@ -515,6 +515,9 @@ body {
   width: 90%;
   display: block;
   transition: all .5s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -540,6 +543,10 @@ body {
 .form__radio-group {
   width: 43%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form__radio-input {
   display: none; }
@@ -603,14 +610,31 @@ body {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0);
     transition: all .5s .2s; }
+    @media (max-width: 56.25em) {
+      .popup__content {
+        width: 100%;
+        padding: 3rem; } }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        width: 50%;
+        height: 100%;
+        vertical-align: middle; } }
   .popup__right {
     width: 66.666667%;
     display: table-cell;
     vertical-align: middle;
-    padding: 3rem 5rem; }
+    padding: 3rem 5rem;
+    text-align: center; }
+    .popup__right h2 {
+      width: 100%; }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        width: 50%;
+        vertical-align: top;
+        padding: 2rem; } }
   .popup__img {
     display: block;
     width: 100%; }
@@ -627,6 +651,10 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        column-count: 1;
+        column-gap: 0; } }
   .popup:target {
     position: fixed;
     top: 0;
